--- a/QR-Code_Example/QR-Code/app/src/main/res/layout/activity_main.xml
+++ b/QR-Code_Example/QR-Code/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
     tools:context="com.example.zarehhakobian.qr_code.MainActivity">
 
 
-
     <ImageView
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imageView"
@@ -27,8 +26,35 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:id="@+id/button"
-        android:onClick="scanQR"
+        android:onClick="scanQRCode"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scan_type"
+        android:textSize="18sp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scan_content"
+        android:autoLink="web"
+        android:textSize="18sp"
+        android:layout_above="@+id/scan_type"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="14dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/time"
+        android:textSize="18sp"
+        android:layout_below="@+id/scan_type"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
