android client ist nun multilanguage und am receiver wird qr generiert

--- a/HoyluReceiver/HoyluReceiver/MainWindow.xaml
+++ b/HoyluReceiver/HoyluReceiver/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HoyluReceiver"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="423.031">
     <Grid>
         <Label x:Name="label" Content="Register Options:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="registerBluetooth" Content="Bluetooth" HorizontalAlignment="Left" Margin="22,70,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.261,0.251"/>
@@ -15,8 +15,9 @@
         <Label x:Name="label1" Content="Name for your Device:" HorizontalAlignment="Left" Margin="14,41,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.343,0.372" Height="27"/>
         <TextBox x:Name="deviceName" HorizontalAlignment="Left" Height="23" Margin="147,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="register" Content="Register your Device" HorizontalAlignment="Left" Margin="22,161,0,0" VerticalAlignment="Top" Width="120" Click="register_Click"/>
-        
-        <Image x:Name="image" HorizontalAlignment="Left" Height="135" Margin="171,161,0,0" VerticalAlignment="Top" Width="162" RenderTransformOrigin="0.515,0.494"/>
+
+        <Image x:Name="image" HorizontalAlignment="Left" Height="156" Margin="197,110,0,0" VerticalAlignment="Top" Width="165" RenderTransformOrigin="0.515,0.494"/>
+        <Image x:Name="qrCodeView" HorizontalAlignment="Left" Height="112" Margin="22,199,0,0" VerticalAlignment="Top" Width="128"/>
 
 
     </Grid>
