--- a/HoyluShare/app/src/main/res/layout/network_list.xml
+++ b/HoyluShare/app/src/main/res/layout/network_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="Geräte im Netzwerk"
+        android:text="@string/dev_in_network"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
