--- a/HoyluReceiver/HoyluReceiver/MainWindow.xaml
+++ b/HoyluReceiver/HoyluReceiver/MainWindow.xaml
@@ -42,6 +42,7 @@
                         <Label x:Name="default_gateway" Content="" HorizontalAlignment="Left" Margin="22,189,0,0" VerticalAlignment="Top"/>
                         <Button x:Name="register" Content="Register your Device" HorizontalAlignment="Left" Margin="22,226,0,0" VerticalAlignment="Top" Width="148" Click="register_Click"/>
                         <Button x:Name="changeDirectory" Content="Change Downloaddirectory" HorizontalAlignment="Left" Margin="22,251,0,0" VerticalAlignment="Top" Width="148" Click="changeDirectory_Click"/>
+                        <ListBox Name="registeredDevices" Margin="10,306,10,10" SelectionChanged="registeredDevices_SelectionChanged"/>
                     </Grid>
                 </Border>
                 <Grid>
