--- a/AndroidClient/Hoylu/app/src/main/res/layout/listview_item_view.xml
+++ b/AndroidClient/Hoylu/app/src/main/res/layout/listview_item_view.xml
@@ -14,4 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textViewSize" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lastModified" />
 </LinearLayout>
